# ddmp

./: .editorconfig  .gitignore  .travis.yml  README.md  dub.sdl  meson.build  package.json  test.sh
.github/workflows/: test.yml
source/ddmp/: diff.d  match.d  patch.d  util.d
test/: dub.sdl  package.json
test/source/: app.d
